force-app/main/default/objects/Encaissement_TIP__c/Encaissement_TIP__c.object-meta.xml
<CustomObject>
    <label>Encaissement TIP</label>
    <nameField>
        <label>Encaissement TIP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encaissements TIP</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>