force-app/main/default/objects/Encaissement_TIP__c/fields/CodeCreancier__c.field-meta.xml
<CustomField>
    <fullName>CodeCreancier__c</fullName>
    <label>CodeCreancier</label>
    <length>6</length>
    <type>Text</type>
</CustomField>