force-app/main/default/objects/Encaissement_TIP__c/fields/Domiciliation__c.field-meta.xml
<CustomField>
    <fullName>Domiciliation__c</fullName>
    <label>Domiciliation</label>
    <length>24</length>
    <type>Text</type>
</CustomField>