force-app/main/default/objects/Encaissement_TIP__c/fields/Import_d_encaissement__c.field-meta.xml
<CustomField>
    <fullName>Import_d_encaissement__c</fullName>
    <label>Import d&apos;encaissement</label>
    <referenceTo>Import_d_encaissement__c</referenceTo>
    <relationshipLabel>Encaissements TIP</relationshipLabel>
    <relationshipName>Encaissements_TIP</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>