force-app/main/default/objects/Encaissement_TIP__c/fields/NomDebiteur__c.field-meta.xml
<CustomField>
    <fullName>NomDebiteur__c</fullName>
    <label>NomDebiteur</label>
    <length>18</length>
    <type>Text</type>
</CustomField>