force-app/main/default/objects/Encaissement_TIP__c/fields/ReferenceOperation__c.field-meta.xml
<CustomField>
    <fullName>ReferenceOperation__c</fullName>
    <label>ReferenceOperation</label>
    <length>24</length>
    <type>Text</type>
</CustomField>