force-app/main/default/objects/Encaissement_TIP__c/fields/RUM__c.field-meta.xml
<CustomField>
    <fullName>RUM__c</fullName>
    <label>RUM</label>
    <length>33</length>
    <type>Text</type>
</CustomField>